--- a/style.css
+++ b/style.css
@@ -75,3 +75,12 @@ footer img:hover {
     width: 350px;
     height: 500px;
 }
+
+.tlo {
+    height: 100vh; /* Wysokość na całe okno przeglądarki */
+    margin: 0; /* Brak marginesów */
+    background-image: url('twoj-obrazek.jpg'); /* Ścieżka do obrazu tła */
+    background-size: cover; /* Dopasowanie tła */
+    background-position: center; /* Wyśrodkowanie obrazu */
+    background-repeat: no-repeat; /* Bez powtarzania obrazu */
+}
