--- a/style.css
+++ b/style.css
@@ -77,10 +77,9 @@ footer img:hover {
 }
 
 .tlo {
-    height: 100vh; /* Wysokość na całe okno przeglądarki */
-    margin: 0; /* Brak marginesów */
-    background-image: url('tłostrona.jpg'); /* Ścieżka do obrazu tła */
-    background-size: cover; /* Dopasowanie tła */
-    background-position: center; /* Wyśrodkowanie obrazu */
-    background-repeat: no-repeat; /* Bez powtarzania obrazu */
+    flex: 1; /* Wypełnia pozostałą przestrzeń */
+    background-image: url('twoj-obrazek.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
